--- a/package.json
+++ b/package.json
@@ -6,19 +6,18 @@
   "author": "<ovr.shevtsov@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "cypress": "^4.0.0",
+    "cypress": "^4.3.0",
     "klaw-sync": "^6.0.0",
-    "allure-mocha": "^2.0.0-beta.6",
-    "mocha": "^7.0.1"
+    "allure-mocha": "^2.0.0-beta.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-chai-friendly": "^0.5.0",
-    "eslint-plugin-cypress": "^2.9.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "mocha": "^7.0.1",
-    "prettier": "^1.19.1"
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "mocha": "^7.1.1",
+    "prettier": "^2.0.4"
   },
   "scripts": {
     "cy:open": "yarn cypress open",
